--- a/Kaggle_Titanic.ipynb
+++ b/Kaggle_Titanic.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7bb39cc98214a34d44a40c3ff83015a23d0fc09764c44a509d112a153ee8223a"
+  "signature": "sha256:57dceae9146100cd7d4851cfb19deccb25eebc022538cc431e7b215eb6bcf504"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1330,12 +1330,12 @@
      "prompt_number": 58
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 2,
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Titanic Accuracy"
+     ]
     },
     {
      "cell_type": "code",
@@ -1394,19 +1394,6 @@
       }
      ],
      "prompt_number": 11
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# model_log = RandomForestClassifier().fit(tX, tY)\n",
-      "# Y_pred_log = model_log.predict(tX_test)\n",
-      "# titanic_test['Survived'] = Y_pred_log"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -1524,33 +1511,6 @@
       }
      ],
      "prompt_number": 15
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "for x in titanic_test.Name:\n",
-      "    if (\"Miss. \") in x:\n",
-      "        print x.index.tolist()\n",
-      "    \n",
-      "# if (\"Miss. \")]):\n",
-      "    "
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "AttributeError",
-       "evalue": "'builtin_function_or_method' object has no attribute 'tolist'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-16-5596f1254ac3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtitanic_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mName\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"Miss. \"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0;32mprint\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# if (\"Miss. \")]):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mAttributeError\u001b[0m: 'builtin_function_or_method' object has no attribute 'tolist'"
-       ]
-      }
-     ],
-     "prompt_number": 16
     }
    ],
    "metadata": {}
